[INPL-0931] Move supplierCode out of collection
[INP-349]